--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -3,7 +3,7 @@
     <h3 class="float-md-start mb-0">Cover</h3>
     <nav class="nav nav-masthead justify-content-end float-md-end">
       <a class="nav-link" href="/">Home</a>
-      <a class="nav-link" href="/per_state">Tutorial</a>
+      <a class="nav-link" href="/per_state">Per State</a>
       <a class="nav-link" href="/about">About</a>
     </nav>
   </div>
