--- a/templates/per_state.html
+++ b/templates/per_state.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 {% block title %}Home Page{% endblock %}
 {% block content %}
 <h1 class="cover-heading">Per State page.</h1>
