--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
+
 	<!-- Extra meta tags -->
 	<meta name="description" content>
 	<meta name="author" content="Sebastian Echeverry">
@@ -15,6 +15,11 @@
 		integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 	<title>{% block title %}{% endblock %}</title>
+
+	{% block headhtml %}{% endblock %}
+
+	<!-- Our CSS -->
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 
 <body class="d-flex h-100 text-center text-black bg-light">
@@ -25,6 +30,7 @@
 		</main>
 		{% include "includes/_footer.html" %}
 	</div>
+	{% block bodyhtml %}{% endblock %}
 </body>
 
 </html>
