--- a/templates/state.html
+++ b/templates/state.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}Home Page{% endblock %}
+{% block title %}{{state}}{% endblock %}
 {% block content %}
-<h1 class="cover-heading">Per State page.</h1>
+<h1 class="cover-heading">{{state}} State page.</h1>
 <p class="lead">WIP Display per state.</p>
 {% endblock %}
