--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
 <p class="lead">WIP Display map.</p>
 <div style="max-width: 100%; margin: auto" id="usa-states-map" class="js-plotly-plot"></div>
 <div>
-	<button id="play-button" onclick="onPlayClicked()">Play</button>
-	<input type="range" id="datetime-slider" style="width: 80%"  min="0" max="5" value="0" step="1">
+	<button id="play-button">Play</button>
 	<!-- <input type="range" style="width: 80%" id="datetime-slider" min="0" max="11" value="7" step="1"> -->
-	<button id="loop-button" onclick="onLoopClicked()">Loop</button>
+	<button id="loop-button">Loop</button>
+	<input type="range" id="datetime-slider" style="width: 80%"  min="0" max="5" value="0" step="1">
 </div>
 
 {% endblock %}
@@ -23,8 +23,10 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 
 <!-- Our JS -->
-<script type="text/javascript" src="static/js/statesDisplay.js"></script>
-<script type="text/javascript" src="static/js/timeSlider.js"></script>
+<script type="text/javascript" src="static/js/StatesData.js"></script>
+<script type="text/javascript" src="static/js/TimeSlider.js"></script>
+<script type="text/javascript" src="static/js/StatesDisplay.js"></script>
 <!-- <script type="text/javascript" src="static/js/config.js"></script>
 <script type="text/javascript" src="static/js/logic.js"></script> -->
+
 {% endblock %}
