--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,12 @@
 <h1 class="cover-heading">Main page.</h1>
 <p class="lead">WIP Display map.</p>
 <div style="max-width: 100%; margin: auto" id="usa-states-map" class="js-plotly-plot"></div>
-<div>
+<!-- <div>
 	<button id="play-button">Play</button>
-	<!-- <input type="range" style="width: 80%" id="datetime-slider" min="0" max="11" value="7" step="1"> -->
+	<input type="range" style="width: 80%" id="datetime-slider" min="0" max="11" value="7" step="1"> 
 	<button id="loop-button">Loop</button>
 	<input type="range" id="datetime-slider" style="width: 80%"  min="0" max="5" value="0" step="1">
-</div>
+</div> -->
 
 {% endblock %}
 {% block bodyhtml %}
