fix loading data

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 
 <!-- Our JS -->
+<script type="text/javascript" src="static/js/States.js"></script>
 <script type="text/javascript" src="static/js/StatesData.js"></script>
 <script type="text/javascript" src="static/js/TimeSlider.js"></script>
 <script type="text/javascript" src="static/js/StatesDisplay.js"></script>
