add in sqlite3 files

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,7 @@
 <!-- Our JS -->
 <script type="text/javascript" src="static/js/States.js"></script>
 <script type="text/javascript" src="static/js/StatesData.js"></script>
-<script type="text/javascript" src="static/js/TimeSlider.js"></script>
-<script type="text/javascript" src="static/js/StatesDisplay.js"></script>
+<script type="text/javascript" src="static/js/statesDisplay.js"></script>
 <!-- <script type="text/javascript" src="static/js/config.js"></script>
 <script type="text/javascript" src="static/js/logic.js"></script> -->
 
