--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <!-- Our JS -->
-<script type="text/javascript" src="static/js/States.js"></script>
-<script type="text/javascript" src="static/js/StatesData.js"></script>
-<script type="text/javascript" src="static/js/statesDisplay.js"></script>
+<script type="text/javascript" src="/static/js/States.js"></script>
+<script type="text/javascript" src="/static/js/StatesData.js"></script>
+<script type="text/javascript" src="/static/js/PlotlyUnitedStates.js"></script>
 
 {% endblock %}
