--- a/templates/state.html
+++ b/templates/state.html
@@ -1,6 +1,27 @@
 {% extends "layout.html" %}
 {% block title %}{{state}}{% endblock %}
+{% block headhtml %}
+<!-- D3 and Plotly -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+{% endblock %}
 {% block content %}
 <h1 class="cover-heading">{{state}} State page.</h1>
 <p class="lead">WIP Display per state.</p>
+<div id="state-map" class="js-plotly-plot"></div>
+
+{% endblock %}
+{% block bodyhtml %}
+<!-- d3 JavaScript -->
+<script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
+
+<!-- jquery JavaScript -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Our JS -->
+<script type="text/javascript" src="/static/js/States.js"></script>
+<script type="text/javascript" src="/static/js/StatesData.js"></script>
+<script type="text/javascript" src="/static/js/PlotlyState.js"></script>
+
 {% endblock %}
