--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
 <h1 class="cover-heading">Main page.</h1>
-<p class="lead">WIP Display map.</p>
+<!-- <p class="lead">WIP Display map.</p> -->
 <div style="max-width: 100%; margin: auto;" id="usa-states-map" class="js-plotly-plot"></div>
 
 {% endblock %}
