--- a/templates/about.html
+++ b/templates/about.html
@@ -33,10 +33,9 @@
 			<div class="card-body">
 				<h5 class="card-title">Giada Innocenti</h5>
 				<p class="card-text">Postdoctoral Fellow @ Georgia Institute of Technology </p>
-				<p class="card-text" style="font-style: italic;">Giada mentors young people and is passionate
-					about
-					increasing the number of qualified students who are traditionally under-represented in STEM
-					fields.</p>
+				<p class="card-text" style="font-style: italic;">Giada has a PhD in industrial chemistry 
+					and she is researching how to improve the sustainability of industrial chemical processes.
+					She has always been data-driven and passionate about data analysis.</p>
 			</div>
 		</div>
 	</div>
