cleanup and add extrnal plugin

--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -1,6 +1,6 @@
 <header class="mb-auto">
   <div>
-    <h3 class="float-md-start mb-0">Air Quality by State</h3>
+    <h3 class="float-md-start mb-0"><a href="https://github.com/giadainnocenti/enviroment-impact-health">Environment Impact Health</a></h3>
     <nav class="nav nav-masthead justify-content-end float-md-end">
       <a class="nav-link" href="/">Home</a>
       <a class="nav-link" href="/state/GA">Per State</a>
