--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,8 @@
 <div class="row row-cols-1 row-cols-md-4 g-4">
 	<div class="col">
 		<div class="card border-dark h-100">
-			<img src="/static/images/about/SebastianEcheverry.PNG" class="img-thumbnail" class="card-img-top" alt="..." width="105" height="115">
+			<img src="/static/images/about/SebastianEcheverry.PNG" class="img-thumbnail" class="card-img-top" alt="..."
+				width="105" height="115">
 			<div class="card-body">
 				<h5 class="card-title">Sebastian Echeverry</h5>
 				<p class="card-text">Unity Developer at NexTech AR Solutions </p>
@@ -17,31 +18,38 @@
 					background but has
 					transitioned into a software development role, working to balance solid principles with
 					functional programming.</p>
-				<a href="https://www.linkedin.com/in/unosebastian/" class="card-link">LinkedIn</a>
-				<!-- <img class="card-img-bottom" class="img-thumbnail" src="Octocat.png" alt="Github"width="55" height="55" > -->
+				<a href="https://github.com/uno-sebastian" class="card-link">GitHub
 				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
 					viewBox="0 0 16 16">
 					<path
 						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-				</svg>
+				</svg></a>
 			</div>
 		</div>
 	</div>
 	<div class="col">
 		<div class="card border-dark h-100">
-			<img src="/static/images/about/GiadaInnocenti.PNG" class="img-thumbnail" class="card-img-top" alt="..." width="105" height="118">
+			<img src="/static/images/about/GiadaInnocenti.PNG" class="img-thumbnail" class="card-img-top" alt="..."
+				width="105" height="118">
 			<div class="card-body">
 				<h5 class="card-title">Giada Innocenti</h5>
 				<p class="card-text">Postdoctoral Fellow @ Georgia Institute of Technology </p>
-				<p class="card-text" style="font-style: italic;">Giada has a PhD in industrial chemistry 
+				<p class="card-text" style="font-style: italic;">Giada has a PhD in industrial chemistry
 					and she is researching how to improve the sustainability of industrial chemical processes.
 					She has always been data-driven and passionate about data analysis.</p>
+				<a href="https://github.com/giadainnocenti" class="card-link">GitHub
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+					viewBox="0 0 16 16">
+					<path
+						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+				</svg></a>
 			</div>
 		</div>
 	</div>
 	<div class="col">
 		<div class="card border-dark h-100">
-			<img src="/static/images/about/JourdanNorman.PNG" class="img-thumbnail" class="card-img-top" alt="Jourdan's pic" width="105" height="118">
+			<img src="/static/images/about/JourdanNorman.PNG" class="img-thumbnail" class="card-img-top"
+				alt="Jourdan's pic" width="105" height="118">
 			<div class="card-body">
 				<h5 class="card-title">Jourdan Norman</h5>
 				<p class="card-text">Associate Product Manager at Mohawk Industries Headquarters</p>
@@ -49,19 +57,32 @@
 				<p class="card-text" style="font-style: italic;">Jourdan is using his educational and
 					professional experiences
 					to build upon his long term goals in ecological construction and commercial real estate.</p>
+				<a href="https://github.com/JNorman97" class="card-link">GitHub
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+					viewBox="0 0 16 16">
+					<path
+						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+				</svg></a>
 			</div>
 		</div>
 	</div>
 	<div class="col">
 		<div class="card border-dark h-100">
-			<img src="/static/images/about/AmyLouiseLang.PNG" class="img-thumbnail" class="card-img-top" alt="..." width="105" height="115">
+			<img src="/static/images/about/AmyLouiseLang.PNG" class="img-thumbnail" class="card-img-top" alt="..."
+				width="105" height="115">
 			<div class="card-body">
 				<h5 class="card-title">Amy Louise Lang</h5>
 				<p class="card-text">Senior GIS Analyst at Centers for Disease Control and Prevention (CDC)</p>
 				<p class="card-text" style="font-style: italic;">Amy enjoys applying Geographic Information
 					System (GIS) methods to address public
 					health issues in humanitarian and
-					emergency response settings.</pclass>
+					emergency response settings.</p>
+				<a href="https://github.com/LangsterGA" class="card-link">GitHub
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+					viewBox="0 0 16 16">
+					<path
+						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+				</svg></a>
 			</div>
 		</div>
 	</div>
