--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,3 +1,4 @@
 <footer class="mt-auto text-black-50">
-  <p>Cool project by some cool people</p>
+  <p>Share this page project by some cool people!</p>
+  <div id="share"></div>
 </footer>
