--- a/templates/index.html
+++ b/templates/index.html
@@ -7,17 +7,18 @@
 
 {% endblock %}
 {% block content %}
-<h1 class="cover-heading">Main page.</h1>
-<!-- <p class="lead">WIP Display map.</p> -->
-<div style="max-width: 100%; margin: auto;" id="usa-states-map" class="js-plotly-plot"></div>
+<h1 class="cover-heading">USA Data Over Time</h1>
+<br>
 
+ <p class="lead">Click a state to view more info</p> 
+ <br>
+<div style="max-width: 100%; margin: auto;" id="usa-states-map" class="js-plotly-plot"></div>
+<br>
+<p class="lead">Use the slider to change the year</p> 
 {% endblock %}
 {% block bodyhtml %}
 <!-- d3 JavaScript -->
 <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
-
-<!-- jquery JavaScript -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <!-- Our JS -->
 <script type="text/javascript" src="/static/js/States.js"></script>
