--- a/templates/state.html
+++ b/templates/state.html
@@ -7,8 +7,8 @@
 
 {% endblock %}
 {% block content %}
-<h1 class="cover-heading">{{state}} State page.</h1>
-
+<h1 class="cover-heading">{{full_state_name}}'s Data Over Time</h1>
+<br>
 <!-- <p class="lead">WIP Display per state.</p> -->
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
